--- a/app/resources.qrc
+++ b/app/resources.qrc
@@ -70,9 +70,8 @@
         <file>languages/qml_lt.qm</file>
         <file>languages/qml_et.ts</file>
         <file>languages/qml_et.qm</file>
-        <!-- Don't include pt_BR until it is more complete -->
-        <!--file>languages/qml_pt_BR.qm</file-->
-        <!--file>languages/qml_pt_BR.ts</file-->
+        <file>res/header-bar.svg</file>
+        <file>res/settings-icon.svg</file>
     </qresource>
     <qresource prefix="/data">
         <file alias="gamecontrollerdb.txt">SDL_GameControllerDB/gamecontrollerdb.txt</file>
