--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -24,5 +24,8 @@
         <file>menubar-gui/Constants.qml</file>
         <file>menubar-gui/qmldir</file>
         <file>menubar-gui/Colors.qml</file>
+        <file>menubar-gui/AppState.qml</file>
+        <file>menubar-gui/NoConnectionsContent.qml</file>
+        <file>menubar-gui/AddPCButton.qml</file>
     </qresource>
 </RCC>
