Added switching between app states, size transition already works

--- a/app/qml.qrc
+++ b/app/qml.qrc
@@ -27,5 +27,7 @@
         <file>menubar-gui/AppState.qml</file>
         <file>menubar-gui/NoConnectionsContent.qml</file>
         <file>menubar-gui/AddPCButton.qml</file>
+        <file>menubar-gui/ConnectedContent.qml</file>
+        <file>menubar-gui/ContentLoader.qml</file>
     </qresource>
 </RCC>
